#[build-system]
#requires = [
#    "setuptools = ^61.0",  
#    "torch = ^2.3.1",
#    ]
#build-backend = "setuptools.build_meta"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "sam2"
version = "0.0.1"
description = "The repository provides code for running inference with the Meta Segment Anything Model 2 (SAM 2), links for downloading the trained model checkpoints, and example notebooks that show how to use the model."
authors = ["Martin Kvisvik Larsen <martin.kvisvik.larsen@hotmail.com>"]
readme = "README.md"
packages = [{include = "sam2"}]
package-mode = true


[tool.poetry.dependencies]
python = "~3.12"
numpy = "^1.24.4"
tqdm = "^4.66.1"
hydra-core = "^1.3.2"
iopath = "^0.1.10"
pillow = "^9.4.0"
torch = "^2.3.1"
torchvision = "^0.18.1"


[tool.poetry.group.dev.dependencies]
black = "==24.2.0"
usort = "==1.0.2"
ufmt = "==2.0.0b2"


[tool.poetry.group.demo.dependencies]
matplotlib = ">=3.9.1"
jupyter = ">=1.0.0"
opencv-python = ">=4.7.0"


[tool.black]
skip-string-normalization = true
line-length = 80


[tool.ruff]
line-length = 80 # Same as Black.
